<resources>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">DsaTab ist eine Android App, mit der man seine Helden direkt auf seinem Handy/Tablet zum Rollenspielabend mitnehmen kann und sich so einige Zettel und Rechnereien erspart.</string>
<string name="items">Gegenstände</string>
    <string name="hero_chooser_title">Held auswählen</string>
    <string name="item_container_edit_title">Behälter bearbeiten</string>
    <string name="capacity_value">%1$d von %2$d Unzen</string>
    <string name="path_items">https://dl.dropboxusercontent.com/u/15750588/dsatab-items3.zip</string>
    <string name="app_name">DsaTab</string>
    <string name="label_haar_augen_farbe">Haar,Augen</string>
    <string name="label_alter">Alter</string>
    <string name="label_ausbildung">Ausbildung</string>
    <string name="label_gewicht">Gewicht</string>
    <string name="label_consider_rs">RS berücksichtigen</string>
    <string name="label_consider_wound">Wunde berücksichtigen</string>
    <string name="label_groesse">Größe</string>
    <string name="label_rasse">Rasse</string>
    <string name="label_capacity">Kapazität</string>
    <string name="label_kultur">Kultur</string>
    <string name="label_aussehen">Aussehen</string>
    <string name="label_familie">Familie</string>
    <string name="label_stand">Stand</string>
    <string name="label_titel">Titel</string>
    <string name="label_ws">Wundschwelle</string>
    <string name="label_ws_short">WS</string>
    <string name="label_ini">Initiative</string>
    <string name="label_ini_short">Ini</string>
    <string name="label_fk">Fernkampf</string>
    <string name="label_fk_short">FK</string>
    <string name="label_pa">Parade</string>
    <string name="label_pa_short">PA</string>
    <string name="label_at">Attacke</string>
    <string name="label_at_short">AT</string>
    <string name="label_be">Behinderung</string>
    <string name="label_be_short">BE</string>
    <string name="label_gs">Geschwindigkeit</string>
    <string name="label_gs_short">GS</string>
    <string name="label_ap">Abenteuerpunkte</string>
    <string name="label_ap_short">AbP</string>
    <string name="label_st">Stufe</string>
    <string name="label_st_short">ST</string>
    <string name="label_so">Sozialstatus</string>
    <string name="label_so_short">SO</string>
    <string name="label_mr">Magieresistenz</string>
    <string name="label_mr_short">MR</string>
    <string name="label_ke">Karmaenergie</string>
    <string name="label_ke_short">KE</string>
    <string name="label_ae">Astralenergie</string>
    <string name="label_ae_short">AE</string>
    <string name="label_au">Ausdauer</string>
    <string name="label_au_short">AU</string>
    <string name="label_le">Lebensenergie</string>
    <string name="label_le_short">LE</string>
    <string name="label_kk">Körperkraft</string>
    <string name="label_kk_short">KK</string>
    <string name="label_ko">Konstitution</string>
    <string name="label_ko_short">KO</string>
    <string name="label_ge">Gewandtheit</string>
    <string name="label_ge_short">GE</string>
    <string name="label_ff">Fingerfertigkeit</string>
    <string name="label_ff_short">FF</string>
    <string name="label_ch">Charisma</string>
    <string name="label_ch_short">CH</string>
    <string name="label_in">Intuition</string>
    <string name="label_in_short">IN</string>
    <string name="label_kl">Klugheit</string>
    <string name="label_kl_short">KL</string>
    <string name="label_mu">Mut</string>
    <string name="label_mu_short">MU</string>
    <string name="label_lo">Loyalität</string>
    <string name="label_lo_short">LO</string>
    <string name="label_rs">Rüstungsschutz</string>
    <string name="label_rs_short">RS</string>
    <string name="label_donate">Spenden</string>
    <string name="label_no_thanks">Nein danke</string>
    <string name="hero_loaded">%s geladen</string>
    <string name="hero_saved">%s gespeichert</string>
    <string name="menu_assign_secondary_weapon">Zweitwaffe zuweisen</string>
    <string name="combat_style">Kampfstil</string>
    <string name="offensive">Offensiv</string>
    <string name="defensive">Defensiv</string>
    <string name="menu_unassign_item">Zuweisung aufheben</string>
    <string name="menu_delete_item">Löschen</string>
    <string name="menu_assign_hunting_weapon">Als Jagdwaffe verwenden</string>
    <string name="menu_sort_items">Einträge sortieren</string>
    <string name="menu_select_version">Variante auswählen</string>
    <string name="menu_select_talent">Talent auswählen</string>
    <string name="menu_reset_values">Werte zurücksetzen</string>
    <string name="menu_equipment_set">Ausrüstungsset %s</string>
    <string name="advantages">Vorteile</string>
    <string name="disadvantages">Nachteile</string>
    <string name="specialfeatures">Sonderfertigkeiten</string>
    <string name="label_ok">OK</string>
    <string name="label_edit">Ändern</string>
    <string name="label_cancel">Abbrechen</string>
    <string name="modifikatoren">Modifikatoren</string>
    <string name="menu_edit_item">Eintrag bearbeiten</string>
    <string name="recording">Aufnahme</string>
    <string name="recording_message">Aufnahme läuft&#8230;</string>
    <string name="label_save">Speichern</string>
    <string name="label_delete">Löschen</string>
    <string name="settings">Einstellungen</string>
    <string name="menu_done">Fertig</string>
    <string name="menu_save">Speichern</string>
    <string name="menu_discard">Verwerfen</string>
    <string name="menu_view_item">Betrachten</string>
    <string name="menu_download_item">Herunterladen</string>
    <string name="menu_upload_item">Hochladen</string>
    <string name="menu_show_comments">Kommentare einblenden</string>
    <string name="menu_hide_comments">Kommentare ausblenden</string>
    <string name="message_empty">"Keine Einträge gefunden."\n\n
"Um diesen Tab zu entfernen, wähle den Menüpunkt <b>Tabs anpassen</b>,\noder klicke auf diese Nachricht."</string>
<string name="message_items_empty">"Keine Einträge gefunden."\n\n
"Fügen sie neue Gegenstände über das Menü hinzu."</string>
    <string name="message_documents_empty">"Keine Dokumente gefunden."\n\n
"Kopiere sie auf deine SD-Karte unter \""<b>%1$s</b>"\"."</string>
    <string name="message_map_empty">"Kein Kartenmaterial gefunden."\n\n
"Scan deine Karten ein und kopiere sie auf deine SD-Karte unter \""<b>%1$s</b>"\"."\n
"Oder lade dir unter <b>Einstellungen > Portaits, Bilder, etc herunterladen</b> das offiziele Kartenpaket herunter."</string>
    <string name="message_heroes_empty">"Es wurden keine Helden-Dateien gefunden."\n\n
"Stell sicher, dass sich auf der SD-Karte unter \""<b>%1$s</b>"\"\n die als XML-Datei exportierten Helden der Helden-Software befinden.\n\n
Dsatab kann deine Helden nun auch automatisch in der Cloud speichern.\nVerbinde Dsatab mit deinem Dropbox oder Google Drive Konto um die Helden sowohl auf deinem PC als auch Smartphone im Unterverzeichnis \"dsatab\" synchron zu halten."</string>
    <string name="search_hint">Suchen</string>
    <string name="search_wiki_hint">Suche bei Wiki Aventurica</string>
    <string name="title_credits">Credits</string>
    <string name="news_title">Informationen</string>
    <string name="tip_0_title">Tabs anpassen</string>
    <string name="tip_1_title">Varianten auswählen</string>
    <string name="tip_2_title">Zusätzliche Probenzuschläge</string>
    <string name="tip_3_title">Zusätzliche Modifikatoren</string>
    <string name="message_search_empty">Die Suche hat keine Treffer gefunden.</string>
    <string name="label_name">Name</string>
    <string name="label_social_state">Sozialstatus</string>
    <string name="label_note">Notiz</string>
    <string name="message_maps_empty">Keine Karten gefunden</string>
    <string name="message_notes_empty">Keine Notizen gefunden</string>
    <string name="message_item_list_empty">Keine Gegenstände gefunden.\n Klicke auf "Gegenstand hinzufügen" um dein Inventar zu füllen.</string>
    <string name="message_map_loading">Karte wird geladen</string>
    <string name="label_total">Total</string>
    <string name="message_show_tip_of_the_day">Tip des Tages anzeigen</string>
    <string name="label_manual">Manuell</string>
    <string name="label_talentname">Talentname</string>
    <string name="label_search">Suchen</string>
    <string name="label_owner">Eigentümer</string>
    <string name="label_herokey_heroid">HeldenKey / HeldenID</string>
    <string name="label_new_hero">Neuen Held</string>
    <string name="label_current_hero">Aktuellen Held</string>
    <string name="label_distance">Entfernung</string>
    <string name="label_enemy">Gegner</string>
    <string name="label_size">Größe</string>
    <string name="label_misc_modifications">Sonstige Modifikatoren</string>
	<string name="message_modifikator">Erschwernis: %1$s</string>
	<string name="pref_sdcardPath_description">Pfad auf der SD Karte zu den DsaTab Daten (Karten Material, &#8230;)</string>
	<string name="pref_sdcardPath_title">Internal Storage: Pfad zu DsaTab</string>
	<string name="pref_sdcardHeroPath_description">Pfad auf der SD Karte zu den DsaTab Helden Dateien</string>
	<string name="pref_sdcardHeroPath_title">Internal Storage: Pfad zu Helden Xml-Dateien</string>
	<string name="modifier_reichweite_jagdwaffe_schritt">Reichweite der Jagdwaffe unter %1$s Schritt</string>
	<string name="modifier_wache_gefahreninstinkt">Gefahreninstinkt TaW/2</string>
	<string name="modifier_wache_ausdauernd">Ausdauernd Pkt/3</string>
	<string name="modifier_waffe_geringe_kk">Zu geringe Körperkraft</string>
	<string name="modifier_waffe_waffenmodifikator_at">Waffenmodifikator At</string>
	<string name="modifier_waffe_waffenmodifikator_pa">Waffenmodifikator Pa</string>
	<string name="modifier_schildkampf_modifikator_at">Schildkampf Modifikator At</string>
	<string name="modifier_schildmodifikator_at">Schildmodifikator At</string>
	<string name="modifier_schildmodifikator_pa">Schildmodifikator PA</string>
	<string name="modifier_shield_hauptwaffe_paradewert">Hauptwaffe hat Paradewert von %1$s. Schildparade %2$s</string>
	<string name="modifier_behinderung">Behinderung %1$s</string>
	<string name="show_unused">Ungenütze anzeigen</string>
	<string name="show_favorites">Favoriten anzeigen</string>
	<string name="show_normal">Normale anzeigen</string>
	<string name="consider_modificators">Modifikatoren einberechnen</string>
	<string name="list_content">Listeninhalt</string>
	<string name="add">Hinzufügen</string>
	<string name="label_taw_short">TaW</string>
	<string name="label_tap_short">TaP*</string>
	<string name="difficulty">Erschwernis:</string>
	<string name="label_type">Art</string>
	<string name="label_target">Ziel</string>
	<string name="label_range">Reichweite</string>
	<string name="label_ritual_duration">Ritualdauer</string>
	<string name="label_effect">Wirkung</string>
	<string name="label_effect_duration">Wirkungsdauer</string>
	<string name="label_probe">Probe</string>
	<string name="label_costs">Kosten</string>
	<string name="label_origins">Herkunft</string>
	<string name="label_source">Quelle</string>
	<string name="label_feature">Merkmal</string>
	<string name="label_gattung">Gattung</string>
	<string name="label_special_features">Sonderfertigkeiten</string>
	<string name="label_advantages">Vorteile</string>
	<string name="label_disadvantages">Nachteile</string>
	<string name="label_attacks">Angriffe</string>
	<string name="display">Darstellung</string>
<string name="selection">Markierungen</string>
<string name="mark_as_favorite">Als Favorit markieren</string>
<string name="mark_as_unused">Als ungenützt markieren</string>
<string name="clear_selection">Markierung aufheben</string>
<string name="list">Liste</string>
<string name="grid">Grid</string>
</resources>