<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/gen_description"
            style="?attr/cardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            tools:visibility="gone">

            <GridLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:useDefaultMargins="true">

                <com.thebnich.floatinghintedittext.FloatingHintTextView
                    android:id="@+id/gen_family"
                    style="@style/TextValue.Small"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/label_familie"
                    android:maxLines="1">
                </com.thebnich.floatinghintedittext.FloatingHintTextView>

                <com.thebnich.floatinghintedittext.FloatingHintTextView
                    android:id="@+id/gen_species"
                    style="@style/TextValue.Small"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/label_gattung"
                    android:maxLines="1">
                </com.thebnich.floatinghintedittext.FloatingHintTextView>

                <com.thebnich.floatinghintedittext.FloatingHintTextView
                    android:id="@+id/gen_gewicht"
                    style="@style/TextValue.Small"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:hint="@string/label_gewicht"
                    android:maxLines="1">
                </com.thebnich.floatinghintedittext.FloatingHintTextView>

                <com.thebnich.floatinghintedittext.FloatingHintTextView
                    android:id="@+id/gen_groesse"
                    style="@style/TextValue.Small"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:hint="@string/label_groesse"
                    android:maxLines="1">
                </com.thebnich.floatinghintedittext.FloatingHintTextView>

                <com.thebnich.floatinghintedittext.FloatingHintTextView
                    android:id="@+id/attr_gs"
                    style="@style/TextValue.Small"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:ellipsize="none"
                    android:hint="@string/label_gs"
                    android:maxLines="1">
                </com.thebnich.floatinghintedittext.FloatingHintTextView>
            </GridLayout>

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/details_hide"
                style="@style/Widget.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/default_gap"
                app:materialIcon="close"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.GridLayout
            android:id="@+id/gen_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            app:alignmentMode="alignBounds"
            app:columnCount="5"
            app:orientation="horizontal"
            app:useDefaultMargins="true">

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_mu_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_mu_short"
                android:maxLines="1"
                android:text="@string/label_mu"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_mu"
                tools:text="10">
            </Button>


            <com.dsatab.view.FlexibleTextView
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_le_short"
                android:text="@string/label_le"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_le"
                style="?attr/buttonStyleLeft">
            </Button>

            <Button
                android:id="@+id/attr_total_le"
                style="?attr/buttonStyleRight">
            </Button>

            <!-- -->

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_kl_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_kl_short"
                android:maxLines="1"
                android:text="@string/label_kl"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_kl"
                tools:text="11">
            </Button>


            <com.dsatab.view.FlexibleTextView
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_au_short"
                android:maxLines="1"
                android:text="@string/label_au"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                >
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_au"
                style="?attr/buttonStyleLeft">
            </Button>

            <Button
                android:id="@+id/attr_total_au"
                style="?attr/buttonStyleRight">
            </Button>

            <!-- -->

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_in_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_in_short"
                android:maxLines="1"
                android:text="@string/label_in"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_in"
                tools:text="9">
            </Button>


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ae_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ae_short"
                android:maxLines="1"
                android:text="@string/label_ae"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ae"
                style="?attr/buttonStyleLeft">
            </Button>

            <Button
                android:id="@+id/attr_total_ae"
                style="?attr/buttonStyleRight">
            </Button>


            <!-- -->

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ch_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ch_short"
                android:maxLines="1"
                android:text="@string/label_ch"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ch"
                tools:text="14">
            </Button>


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ke_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ke_short"
                android:maxLines="1"
                android:text="@string/label_ke"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ke"
                style="?attr/buttonStyleLeft">
            </Button>

            <Button
                android:id="@+id/attr_total_ke"
                style="?attr/buttonStyleRight">
            </Button>


            <!-- -->

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ff_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ff_short"
                android:maxLines="1"
                android:text="@string/label_ff"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ff"
                tools:text="14">
            </Button>


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_mr_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_mr_short"
                android:maxLines="1"
                android:text="@string/label_mr"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_mr"
                style="?attr/buttonStyleLeft"
                tools:text="14">
            </Button>

            <Button
                android:id="@+id/attr_mr2"
                style="?attr/buttonStyleRight"
                tools:text="14">
            </Button>


            <!-- -->


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ge_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ge_short"
                android:maxLines="1"
                android:text="@string/label_ge"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ge"
                tools:text="10">
            </Button>

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_lo_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_span="2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/label_lo_short"
                android:text="@string/label_lo"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"/>

            <Button android:id="@+id/attr_lo"/>

            <!-- -->

            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ko_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_ko_short"
                android:maxLines="1"
                android:text="@string/label_ko"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal">
            </com.dsatab.view.FlexibleTextView>

            <Button
                android:id="@+id/attr_ko"
                tools:text="10">
            </Button>


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_rs_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_span="2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/label_rs_short"
                android:text="@string/label_rs"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"/>

            <Button android:id="@+id/attr_rs"/>

            <!-- -->


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_kk_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/label_kk_short"
                android:maxLines="1"
                android:text="@string/label_kk"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"/>

            <Button
                android:id="@+id/attr_kk"
                tools:text="10"/>


            <com.dsatab.view.FlexibleTextView
                android:id="@+id/attr_ini_label"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/label_ini_short"
                android:text="@string/label_ini"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"/>

            <Button
                android:id="@+id/attr_ini"
                android:layout_span="2"/>

        </android.support.v7.widget.GridLayout>

        <TextView
            android:id="@+id/gen_specialfeatures_title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_special_features">
        </TextView>

        <TextView
            android:id="@+id/gen_specialfeatures"
            style="@style/TextValue.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:ellipsize="none"
            android:lineSpacingExtra="@dimen/default_gap">
        </TextView>

        <TextView
            android:id="@+id/gen_advantages_title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_advantages">
        </TextView>

        <TextView
            android:id="@+id/gen_advantages"
            style="@style/TextValue.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:ellipsize="none"
            android:lineSpacingExtra="@dimen/default_gap"/>

        <TextView
            android:id="@+id/gen_disadvantages_title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_disadvantages">
        </TextView>

        <TextView
            android:id="@+id/gen_disadvantages"
            style="@style/TextValue.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:ellipsize="none"
            android:lineSpacingExtra="@dimen/default_gap">
        </TextView>

        <TextView
            android:id="@+id/gen_attacks_title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_attacks"/>

        <LinearLayout
            android:id="@+id/animal_attacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>