<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_itemgrid_type"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/display">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/option_itemgrid_type_list"
                    android:showAsAction="withText"
                    app:showAsAction="withText"
                    android:title="@string/list"/>
                <item
                    android:id="@+id/option_itemgrid_type_grid"
                    android:showAsAction="withText"
                    app:showAsAction="withText"
                    android:title="@string/grid"/>
            </group>
        </menu>
    </item>

</menu>